--- a/desafio_ajustado/style.css
+++ b/desafio_ajustado/style.css
@@ -16,11 +16,27 @@ header {
     color: white;
     padding: 10px 0;
     text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease;
+
 }
 
-.logo img{
+.logo img {
     width: 100px;
+    transition: all 0.3s ease;
 }
+
+.header-scrolled .logo img {
+    width: 50px;
+}
+
+.header-scrolled {
+    background: rgba(0, 0, 0, 0.789);
+}
+
 
 .nav-links {
     list-style: none;
